logo fading until wide

--- a/static/src/stylesheets/module/commercial/glabs/_hosted-video.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-video.scss
@@ -10,7 +10,7 @@
             }
         }
         .hostedbadge__logo {
-            @include mq($until: tablet) {
+            @include mq($until: wide) {
                 // use fading one
                 display: none;
             }
