--- a/common/app/views/fragments/immersiveMainMedia.scala.html
+++ b/common/app/views/fragments/immersiveMainMedia.scala.html
@@ -6,13 +6,13 @@
 @import views.support.RenderClasses
 
 @defining((
-    page.item.tags.isUSMinuteSeries,
+    page.item.tags.isTheMinuteArticle,
     page.item.elements.hasMainEmbed,
     page.item.fields.main.nonEmpty
-)) { case (isMinuteSeries, hasEmbed, hasMainMedia) =>
+)) { case (isTheMinuteArticle, hasEmbed, hasMainMedia) =>
 
     <div class="@RenderClasses(Map(
-            "content--minute-article" -> isMinuteSeries,
+            "content--minute-article" -> isTheMinuteArticle,
             "content--immersive-article-without-main-media" -> !hasMainMedia,
             "immersive-main-media" -> hasMainMedia
         ),
@@ -24,7 +24,7 @@
                 @fragments.inlineSvg("guardian-logo-160", "logo", Seq("immersive-main-media__logo__svg"))
             </a>
 
-            @if(isMinuteSeries) {
+            @if(page.item.tags.isUSMinuteSeries) {
                 <a class="logo--us-election" href="@LinkTo{/us-news/us-elections-2016}">
                     <span class="u-h">The US Election 2016</span>
                     @fragments.inlineSvg("us-election-logo", "logo")
@@ -56,28 +56,27 @@
         </div>
 
 
-        @if(isMinuteSeries) {
+        @if(isTheMinuteArticle) {
             <div class="content--minute-article--overlay"></div>
         }
 
         <div class="@RenderClasses(Map(
-                "immersive-main-media__headline-container--dark" -> (!isMinuteSeries && hasMainMedia),
+                "immersive-main-media__headline-container--dark" -> (!isTheMinuteArticle && hasMainMedia),
                 "immersive-main-media__headline-container" -> hasMainMedia
             ))
         ">
             <div class="gs-container">
-                @if(!isMinuteSeries) { <div class="content__main-column"> }
-
-                @if(!isMinuteSeries) {
+                @if(!isTheMinuteArticle) {
+                    <div class="content__main-column">
                     @fragments.meta.metaInline(page.item)
                 }
 
                 <h1 class="@RenderClasses(Map(
-                        "content__headline--minute" -> isMinuteSeries,
+                        "content__headline--minute" -> isTheMinuteArticle,
                         "content__headline--immersive--with-main-media" -> hasMainMedia
                     ), "content__headline", "content__headline--immersive", "content__headline--immersive-article")
                 ">
-                    @if(isMinuteSeries) {
+                    @if(isTheMinuteArticle) {
                         <a href="@LinkTo {/us-news/series/the-campaign-minute-2016}" class="logo--minute-article">
                             <span class="u-h">The Minute - </span>
                             @fragments.inlineSvg("minute-logo", "logo")
@@ -86,10 +85,10 @@
                     @Html(page.item.trail.headline)
                 </h1>
 
-                @if(isMinuteSeries) {
+                @if(isTheMinuteArticle) {
 
                     @if(page.item.trail.shouldHidePublicationDate) {
-                        @fragments.meta.dateline(page.item.trail.webPublicationDate, page.item.fields.lastModified, page.item.content.hasBeenModified, page.item.tags.isLiveBlog, page.item.fields.isLive, isMinuteSeries)
+                        @fragments.meta.dateline(page.item.trail.webPublicationDate, page.item.fields.lastModified, page.item.content.hasBeenModified, page.item.tags.isLiveBlog, page.item.fields.isLive, isTheMinuteArticle)
                     }
 
                     @if(page.item.fields.standfirst.isDefined) {
@@ -97,17 +96,17 @@
                     }
                 }
 
-                @if(!isMinuteSeries && page.item.fields.standfirst.isDefined) {
+                @if(!isTheMinuteArticle && page.item.fields.standfirst.isDefined) {
                     <div class="hide-on-mobile">
                         @fragments.standfirst(page.item)
                     </div>
                 }
 
-                @if(!isMinuteSeries) { </div> }
+                @if(!isTheMinuteArticle) { </div> }
             </div>
         </div>
     </div>
-    @if(page.item.fields.standfirst.isDefined && !isMinuteSeries) {
+    @if(page.item.fields.standfirst.isDefined && !isTheMinuteArticle) {
         <div class="content__wrapper--standfirst mobile-only">
             @fragments.standfirst(page.item)
         </div>
