--- a/common/app/views/fragments/standfirst.scala.html
+++ b/common/app/views/fragments/standfirst.scala.html
@@ -3,7 +3,7 @@
 <div class="@RenderClasses(Map(
     "content__standfirst--gallery" -> item.content.isImmersiveGallery,
     "content__standfirst--immersive-article" -> (item.content.isImmersive && item.tags.isArticle),
-    "content__standfirst--immersive-minute-article" -> item.tags.isUSMinuteSeries),
+    "content__standfirst--immersive-minute-article" -> item.tags.isTheMinuteArticle),
     "content__standfirst")" data-link-name="standfirst" data-component="standfirst">
     @item.fields.trailText.map{ t =>
 
