--- a/static/src/stylesheets/module/content/tones/_tone-media.scss
+++ b/static/src/stylesheets/module/content/tones/_tone-media.scss
@@ -58,8 +58,7 @@
         }
     }
 
-    &:not(.content--advertisement-feature)
-    .brandbadge__logo {
+    &:not(.content--advertisement-feature).brandbadge__logo {
         filter: invert(50%);
     }
 
