Make video full width

--- a/static/src/stylesheets/module/commercial/_creatives.scss
+++ b/static/src/stylesheets/module/commercial/_creatives.scss
@@ -424,6 +424,10 @@
         }
     }
 
+    &.full-width-video .slide-container {
+        width: 100%;
+    }
+
     &.right-aligned-video .video-container__cta {
         display: none;
 
