--- a/common/app/views/fragments/immersiveMainMedia.scala.html
+++ b/common/app/views/fragments/immersiveMainMedia.scala.html
@@ -4,6 +4,8 @@
 @import model.ContentPage
 @import views.support.TrailCssClasses.toneClass
 @import views.support.RenderClasses
+@import conf.switches.Switches._
+@import model.Badges.badgeFor
 
 @defining((
     page.item.tags.isTheMinuteArticle,
@@ -24,11 +26,14 @@
                 @fragments.inlineSvg("guardian-logo-160", "logo", Seq("immersive-main-media__logo__svg"))
             </a>
 
-            @if(page.item.tags.isUSMinuteSeries) {
-                <a class="logo--us-election" href="@LinkTo{/us-news/us-elections-2016}">
-                    <span class="u-h">The US Election 2016</span>
-                    @fragments.inlineSvg("us-election-logo", "logo")
-                </a>
+            @if(ArticleBadgesSwitch.isSwitchedOn) {
+                @badgeFor(page.item).map { badge =>
+                    <div class="badge-slot">
+                        <a href="@LinkTo {/@badge.seriesTag}">
+                            <img class="badge-slot__img" src="@badge.imageUrl"/>
+                        </a>
+                    </div>
+                }
             }
 
         </div>
