Add averaged times to legend

--- a/admin/app/views/commercial/performance/programmaticDashboard.scala.html
+++ b/admin/app/views/commercial/performance/programmaticDashboard.scala.html
@@ -25,9 +25,9 @@
 
         <div class="row graph graph--commercial-app-duration">
             <div class="col-md-2">
-                <div class="graph__legend">
-                    <div class="graph__legend__label">Fastest execution:</div>
-                    <ol>
+                <div class="graph__legend panel panel-default">
+                    <h5 class="graph__legend__label">Execution times</h5>
+                    <ul class="graph__legend__keys">
                         <li>
                             <span class="legend__label--prebid">
                                 <b>— prebid</b>
@@ -46,7 +46,7 @@
                                 <span class="average--sonobi"></span>
                             </span>
                         </li>
-                    </ol>
+                    </ul>
                 </div>
                 <div class="graph__y-axis">Time (ms)</div>
             </div>
