fading colours changed

--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -22,6 +22,10 @@
         border-color: @{page.campaign.fontColour.brandColour};
     }
 
+    .hosted-page .hosted__heading {
+        color: @{page.campaign.fontColour.brandColour};
+    }
+
     .hosted-page .hosted__next-video--tile {
         border-top-color: @{page.campaign.fontColour.brandColour};
     }
