Use static host for omniture
CC @mchv

--- a/archive/app/views/notFound.scala.html
+++ b/archive/app/views/notFound.scala.html
@@ -99,7 +99,7 @@
         <script>
             var s_account="guardiangu-network";
         </script>
-        <script src="https://image.guardian.co.uk/omni/omniture.js"></script>
+        <script src="https://static.guim.co.uk/omni/omniture.js"></script>
         <script>
             s.pageType ="errorPage";
             s.prop19 = "frontend";
