proper label styling

--- a/static/src/stylesheets/module/commercial/gustyle/_gu-comcontent.scss
+++ b/static/src/stylesheets/module/commercial/gustyle/_gu-comcontent.scss
@@ -4,6 +4,10 @@
 
 .gu-display {
     position: relative;
+
+    .hostedbadge__info {
+        @include font-size(13, 11);
+    }
 }
 
 .gu-display__image-layer {
