line height and font-weight fixed

--- a/static/src/stylesheets/module/commercial/gustyle/_gu-comcontent.scss
+++ b/static/src/stylesheets/module/commercial/gustyle/_gu-comcontent.scss
@@ -6,7 +6,8 @@
     position: relative;
 
     .hostedbadge__info {
-        @include font-size(13, 11);
+        @include font-size(13, 10);
+        font-weight: normal;
     }
 }
 
