--- a/static/src/stylesheets/inline/article-labour-liverpool.scss
+++ b/static/src/stylesheets/inline/article-labour-liverpool.scss
@@ -5,6 +5,11 @@ $labour-liverpool-header-element-opacity: .85;
 .immersive-header-container--labour-liverpool {
     min-height: gs-height(8);
 
+    //if immersive switch is on it gets given this class so we can still have a full screen image
+    &.heroic-immersive{
+        min-height: 100vh;
+    }
+
     .immersive-main-media__media {
         position: absolute;
         height: gs-height(8);
@@ -85,6 +90,14 @@ $labour-liverpool-header-element-opacity: .85;
             visibility: visible;
         }
     }
+}
+
+.heroic-immersive{
+  .labour-liverpool-headline {
+    top: auto;
+    bottom: 122px;
+    position: absolute;
+  }
 }
 
 .labour-liverpool-cutout {
