Add variants and button styling.

--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -172,6 +172,13 @@
         margin-left: 0;
     }
 
+    .contributions__contribute--no-buttons--today {
+        width: 150px;
+    }
+
+    .contributions__contribute--no-buttons--make {
+        width: 170px;
+    }
 
 }
 
