--- a/commercial/app/views/hosted/guardianHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle.scala.html
@@ -9,7 +9,7 @@
 @import views.html.hosted.{guardianHostedShareButtons, guardianHostedCta}
 
 @main(page, Some("commercial")) { } {
-    @guardianHostedHeader("hosted-article-page", page.campaign.cssClass, page.campaign.logo.url, page.campaign.owner, page.campaign.logoLink.getOrElse(page.cta.url))
+    @guardianHostedHeader("hosted-article-page", page.campaign.logo.url, page.campaign.owner, page.campaign.logoLink.getOrElse(page.cta.url))
     <div class="hosted-page l-side-margins hosted__side hosted-article-page @{page.campaign.cssClass}">
         <article id="article" data-test-id="article-root" class="content content--article has-feature-showcase-element section-stage content--advertisement-feature" role="main">
             <div class="media-primary media-content media-primary--showcase" style="background-image: url(@{page.mainPicture});">
@@ -225,7 +225,7 @@
                                 <div class="hosted__next-video">
                                     <div class="hosted__next-video--header">
                                         <h2 class="hosted__text hosted__next-video--up-next">More from</h2>
-                                        <h2 class="hosted__next-video--client-name @{page.brandColourCssClass}">@{page.campaign.owner}</h2>
+                                        <h2 class="hosted__next-video--client-name hosted-tone">@{page.campaign.owner}</h2>
                                     </div>
                                     <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Video: @{nextPage.title}">
                                         <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Video: @{nextPage.title}">
@@ -248,7 +248,7 @@
                         <div class="hosted__next-video">
                             <div class="hosted__next-video--header">
                                 <h2 class="hosted__text hosted__next-video--up-next">More from</h2>
-                                <h2 class="hosted__next-video--client-name @{page.brandColourCssClass}">@{page.campaign.owner}</h2>
+                                <h2 class="hosted__next-video--client-name hosted-tone">@{page.campaign.owner}</h2>
                             </div>
                             <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Video: @{nextPage.title}">
                                 <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Video: @{nextPage.title}">
