--- a/commercial/app/views/hosted/guardianHostedArticle2.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle2.scala.html
@@ -6,38 +6,43 @@
     <!--[if (gt IE 9)|(IEMobile)]><!-->
     <style>
     .hosted-tone {
-    color: @{page.campaign.fontColour.brandColour};
+        color: @{page.campaign.fontColour.brandColour};
     }
 
     .hosted-tone-bg {
-    background-color: @{page.campaign.fontColour.brandColour};
+        background-color: @{page.campaign.fontColour.brandColour};
     }
 
     .hosted-tone-btn,
     .hosted-tone-btn:focus,
     .hosted-tone-btn:hover {
-    background-color: @{page.campaign.fontColour.brandColour};
-    border-color: @{page.campaign.fontColour.brandColour};
+        background-color: @{page.campaign.fontColour.brandColour};
+        border-color: @{page.campaign.fontColour.brandColour};
     }
 
     .hosted-page .hosted__next-video--tile {
-    border-top-color: @{page.campaign.fontColour.brandColour};
+        border-top-color: @{page.campaign.fontColour.brandColour};
     }
 
     .hosted-page .hosted__link {
-    color: @{page.campaign.fontColour.brandColour};
+        color: @{page.campaign.fontColour.brandColour};
     }
 
     .hosted-page ~ .survey-overlay-simple .survey-text__header {
-    background-color: @{page.campaign.fontColour.brandColour};
+        background-color: @{page.campaign.fontColour.brandColour};
     }
 
     .hosted-article-page p:not(.hosted__next-page-title):nth-child(2)::first-letter {
-    background-color: @{page.campaign.fontColour.brandColour};
+        background-color: @{page.campaign.fontColour.brandColour};
     }
+
+    .from-content-api ul > li:before {
+        background-color: @{page.campaign.fontColour.brandColour};
+    }
+
     </style>
     <!--<![endif]-->
-    @guardianHostedHeader(if(page.campaign.fontColour.shouldHaveBrightFont) "hosted-article-page hosted-page--bright" else "hosted-article-page", page.campaign.cssClass, page.campaign.logo.url, page.campaign.owner, page.campaign.logoLink.getOrElse(page.cta.url))
+    @guardianHostedHeader(if(page.campaign.fontColour.shouldHaveBrightFont) "hosted-article-page hosted-page--bright" else "hosted-article-page", page.campaign.logo.url, page.campaign.owner, page.campaign.logoLink.getOrElse(page.cta.url))
     <div class="hosted-page l-side-margins hosted__side hosted-article-page @if(page.campaign.fontColour.shouldHaveBrightFont) {hosted-page--bright}">
 
         <article id="article" data-test-id="article-root" class="content content--article has-feature-showcase-element section-stage content--advertisement-feature" role="main">
@@ -45,7 +50,7 @@
                 <div class="gs-container">
                     <h2 class="title content__main-column">@{page.title}</h2>
                 </div>
-                <span class="caption @page.brandColourCssClass">@{page.mainPictureCaption}</span>
+                <span class="caption hosted-tone">@{page.mainPictureCaption}</span>
             </div>
             <div class="content__main">
                 <div class="gs-container">
@@ -66,26 +71,26 @@
                                 case _ => { @Html(page.body) }
                             }
 
-                            <div class="hide-on-desktop">
-                                <div class="hosted__next-video">
-                                    <div class="hosted__next-video--header">
-                                        <div class="hosted__next-page-header--border @page.brandBackgroundCssClass"></div>
-                                        <h2 class="hosted__text hosted__next-video--up-next">More from</h2>
-                                        <h2 class="hosted__next-video--client-name @{page.brandColourCssClass}">@{page.campaign.owner}</h2>
-                                    </div>
-                                    @for(nextPage <- page.nextPages) {
-                                        <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
-                                            <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
-                                            <p class="hosted__next-page-title">@{nextPage.title}</p>
-                                        </a>
-                                    }
+                        </div>
+                        <div class="hide-on-desktop">
+                            <div class="hosted__next-video">
+                                <div class="hosted__next-video--header">
+                                    <div class="hosted__next-page-header--border hosted-tone-bg"></div>
+                                    <h2 class="hosted__text hosted__next-video--up-next">More from</h2>
+                                    <h2 class="hosted__next-video--client-name hosted-tone">@{page.campaign.owner}</h2>
                                 </div>
+                                @for(nextPage <- page.nextPages) {
+                                    <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
+                                        <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
+                                        <p class="hosted__next-page-title">@{nextPage.title}</p>
+                                    </a>
+                                }
                             </div>
                         </div>
                         <div class="hosted__standfirst">
                             <div class="hosted__terms">​Hosted content is used to describe content that is paid for and supplied by the advertiser. Find out more with our
                                 <div class="paidfor-label paidfor-meta__more has-popup hosted__link">
-                                    <button class="u-button-reset paidfor-label__btn hosted__label-btn--small popup__toggle hosted__label-btn js-hosted-about @{page.brandColourCssClass}" data-link-name="terms-and-conditions-text-link">commercial content explainer.</button>
+                                    <button class="u-button-reset paidfor-label__btn hosted__label-btn--small popup__toggle hosted__label-btn js-hosted-about hosted-tone" data-link-name="terms-and-conditions-text-link">commercial content explainer.</button>
                                 </div>
                             </div>
                         </div>
@@ -93,9 +98,9 @@
                     <div class="content__secondary-column js-secondary-column">
                         <div class="hosted__next-video">
                             <div class="hosted__next-video--header">
-                                <div class="hosted__next-page-header--border @page.brandBackgroundCssClass"></div>
+                                <div class="hosted__next-page-header--border hosted-tone-bg"></div>
                                 <h2 class="hosted__text hosted__next-video--up-next">More from</h2>
-                                <h2 class="hosted__next-video--client-name @{page.brandColourCssClass}">@{page.campaign.owner}</h2>
+                                <h2 class="hosted__next-video--client-name hosted-tone">@{page.campaign.owner}</h2>
                             </div>
                             @for(nextPage <- page.nextPages) {
                                 <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
