--- a/commercial/app/views/hosted/guardianHostedArticle2.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle2.scala.html
@@ -32,7 +32,7 @@
         background-color: @{page.campaign.fontColour.brandColour};
     }
 
-    .hosted-article-page p:not(.hosted__next-page-title):nth-child(2)::first-letter {
+    .hosted-article-page p.intro + p::first-letter {
         background-color: @{page.campaign.fontColour.brandColour};
     }
 
