--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -71,7 +71,7 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
             font-size: 18px;
             line-height: 24px;
 
-            &:nth-child(2)::first-letter {
+            &.intro + p::first-letter {
                 @include fs-textSans(4);
                 display: inline-block;
                 float: left;
