fix zootropolis about popup

--- a/commercial/app/views/hosted/guardianHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle.scala.html
@@ -47,14 +47,14 @@
         color: #ffffff;
     }
 
-    ~ .survey-overlay-simple .survey-text__header {
+    .hosted-page ~ .survey-overlay-simple .survey-text__header {
         background-color: @{page.campaign.fontColour.brandColour};
         color: #ffffff;
     }
-    ~ .survey-overlay-simple .survey-text__header .site-message__close-btn {
+     .hosted-page ~ .survey-overlay-simple .survey-text__header .site-message__close-btn {
         border-color: #ffffff;
     }
-    ~ .survey-overlay-simple .survey-text__header .site-message__close-btn .inline-cross {
+     .hosted-page ~ .survey-overlay-simple .survey-text__header .site-message__close-btn .inline-cross {
         fill: #ffffff;
     }
 
