rename zootropolis template from (it was the first article page but it is only being used for zootropolis now)

--- a/commercial/app/views/hosted/zootropolisPage.scala.html
+++ b/commercial/app/views/hosted/zootropolisPage.scala.html
@@ -1,6 +1,6 @@
-@import common.commercial.hosted.HostedArticlePage
+@import common.commercial.hosted.ZootropolisPage
 @import views.html.hosted.guardianHostedHeader
-@(page: HostedArticlePage)(implicit request: RequestHeader)
+@(page: ZootropolisPage)(implicit request: RequestHeader)
 @import layout.ContentWidths.GalleryMedia
 @import model.ImageMedia
 @import model.ImageAsset
