give hosted article template a sensible name now the name is available!

--- a/commercial/app/views/hosted/guardianHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle.scala.html
@@ -1,5 +1,5 @@
-@import common.commercial.hosted.HostedArticlePage2
-@(page: HostedArticlePage2)(implicit request: RequestHeader)
+@import common.commercial.hosted.HostedArticlePage
+@(page: HostedArticlePage)(implicit request: RequestHeader)
 @import views.html.hosted._
 
 @main(page, Some("commercial")) { } {
