--- a/applications/app/views/signup/signupMain.scala.html
+++ b/applications/app/views/signup/signupMain.scala.html
@@ -3,6 +3,7 @@
 @import common.InlineJs
 @import templates.inlineJS.blocking.js._
 @import model.Page
+@import model.EmailSubscriptions
 
 <!DOCTYPE html>
 <html id="js-context" class="js-off is-not-modern id--signed-out" data-page-path="@request.path">
