--- a/admin/app/views/commercial/performance/programmaticDashboard.scala.html
+++ b/admin/app/views/commercial/performance/programmaticDashboard.scala.html
@@ -22,8 +22,8 @@
         <div class="row">
             <div class="col-md-12">
                 <p>
-                    This is the time taken for an individual advert slot to obtain a response from the server.
-                    For programmatic systems, such as 'prebid' or 'sonobi', this time includes the additional network latency introduced by header-bidding.
+                    This is the time taken for an individual advert slot to obtain a response from the server. There are multiple slots on a page, and many page views, so an average is calculated.
+                    For programmatic systems, such as 'prebid' or 'sonobi', the load time includes the additional network latency introduced by header-bidding.
                 </p>
                 <p>
                     The expectation is that prebid's latency increases with additional bidders, whilst sonobi's latency should not be affected by additional bidders.
