--- a/common/app/views/commercial/cards/itemCard.scala.html
+++ b/common/app/views/commercial/cards/itemCard.scala.html
@@ -16,19 +16,19 @@
 <div class="@CssClassBuilder.linkFromStandardCard(item, optAdvertClassNames, optClassNames, useCardBranding)">
     <a href="@item.targetUrl"
        data-link-name="@omnitureId"
-       class="advert">
+       class="advert__container">
+        <div class="advert__image-container @for(imgRatio <- optImgRatio){u-responsive-ratio u-responsive-ratio--@imgRatio}">
+        @image(
+            Seq("advert__image"),
+            FaciaWidths.mediaFromItemClasses(ItemClasses(mobile = Standard, tablet = cardType, desktop = Some(cardType))),
+            maybeImageMedia = item.image,
+            maybeSrc = item.fallbackImageUrl
+        )
+        </div>
         <h2 class="advert__title">
             @for(icon <- item.icon){@inlineSvg(icon, "icon")}
             @item.headline
         </h2>
-        <div class="advert__image-container @for(imgRatio <- optImgRatio){u-responsive-ratio u-responsive-ratio--@imgRatio}">
-            @image(
-                Seq("advert__image"),
-                FaciaWidths.mediaFromItemClasses(ItemClasses(mobile = Standard, tablet = cardType, desktop = Some(cardType))),
-                maybeImageMedia = item.image,
-                maybeSrc = item.fallbackImageUrl
-            )
-        </div>
         @for(description <- item.description) {
             <div class="advert__standfirst">@Html(description)</div>
         }
