--- a/static/src/stylesheets/module/commercial/_adverts-capi.scss
+++ b/static/src/stylesheets/module/commercial/_adverts-capi.scss
@@ -133,6 +133,16 @@
         }
     }
 
+    .advert__container {
+        display: block;
+        color: $neutral-1;
+        max-width: 100%;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+
     .advert__title,
     .advert__meta,
     .advert__standfirst {
